--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@react-three/drei": "^9.17.1",
+    "@react-three/fiber": "^8.1.0",
+    "@react-three/postprocessing": "^2.4.6",
+    "@types/three": "^0.141.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "three": "^0.142.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2"
